--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Be My Valentine 🖤</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>For You 💌</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="slideshow">
-    <img id="slideImage" src="images/slide1.png" alt="Slide 1">
-    
-    <div class="controls">
-      <button class="nav-btn" id="backBtn" onclick="prevSlide()">Back</button>
-      <button class="nav-btn" id="nextBtn" onclick="nextSlide()">Next</button>
+
+  <div class="container">
+    <h1>Can you be my Valentine? 🖤</h1>
+
+    <div class="cat" id="cat">🐈‍⬛</div>
+
+    <div class="buttons" id="buttons">
+      <button id="yesBtn">Yes</button>
+      <button id="noBtn">No</button>
+    </div>
+
+    <div class="form-container" id="form">
+      <h2>Yay 🖤 One last thing…</h2>
+
+      <input type="text" id="pickup" placeholder="Where should I pick you up?" />
+      <input type="time" id="time" />
+      <textarea id="note" rows="3" placeholder="Anything I should know? (optional)"></textarea>
+
+      <button class="submit-btn" id="submitBtn">Lock it in 🐾</button>
+
+      <div class="success" id="successMsg">
+        Got it 🖤 The cat has saved the plan.
+      </div>
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
